# angstyfrostyneko.github.io

./: .gitignore  Cargo.toml  README.md  index.html
.github/workflows/: jekyll-gh-pages.yml
css/: base.css  gpudle.css
gpudle/: main-gpu-list.csv
gpudle/wasm/: Cargo.toml  README.md  build.sh
gpudle/wasm/pkg/: wasm.js  wasm_bg.wasm
gpudle/wasm/src/: database.rs  gpu.rs  lib.rs
html/: gpudle.html
js/: gpudle-old.js  gpudle.js  gpulist.js
