[package]
name = "wasm"
publish = false
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
chrono = "0.4.44"
csv = "1.4.0"
getrandom = { version = "0.4.2", features = ["wasm_js"] }
rand = "0.10.0"
rust-fuzzy-search = "0.1.1"
serde = { version = "1.0.228", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2"
